--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
+    "@mui/styles": "^6.1.0",
+    "@react-buddy/ide-toolbox": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^17.0.0 || ^18.0.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-router-bootstrap": "^0.26.3",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@react-buddy/ide-toolbox": "^2.4.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
